crates/guml-compiler/tests/snapshots/snapshots__counter_react.snap
---
source: crates/guml-compiler/tests/snapshots.rs
expression: "emitted(\"a.guml\", \"react\")"
---
// ---- Counter.tsx ----
import { useState } from "react";

export default function Counter() {
  const [count, setCount] = useState(0);

  return (
    <div className="rounded-xl border border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900 p-6 shadow-sm mx-auto mt-10 w-full max-w-sm text-center">
      <h2 className="text-lg font-semibold text-slate-900 dark:text-slate-100">Clicks</h2>
      <p className="mt-1 text-sm text-slate-500 dark:text-slate-400">Press the buttons to change the value.</p>
      <p className="mt-6 text-center text-5xl font-bold tabular-nums text-slate-900 dark:text-slate-100">{count}</p>
      <div className="flex items-center gap-3 justify-center">
        <button className="rounded-md px-4 py-2 text-sm font-medium transition-colors border-transparent text-slate-700 hover:bg-slate-100 dark:text-slate-300 dark:hover:bg-slate-800 focus:ring-2 focus:ring-slate-900 dark:focus:ring-slate-100 disabled:opacity-40" type="button" disabled={!count} onClick={() => { setCount(count - 1); }}>Decrement</button>
        <button className="rounded-md px-4 py-2 text-sm font-medium transition-colors bg-slate-900 dark:bg-slate-100 text-white dark:text-slate-900 hover:bg-slate-800 dark:hover:bg-slate-200 focus:ring-2 focus:ring-slate-900 dark:focus:ring-slate-100 disabled:opacity-40" type="button" onClick={() => { setCount(count + 1); }}>Increment</button>
        <button className="rounded-md px-4 py-2 text-sm font-medium transition-colors text-slate-500 dark:text-slate-400 hover:text-slate-900 dark:hover:text-slate-100 focus:ring-2 focus:ring-slate-900 dark:focus:ring-slate-100 disabled:opacity-40" type="button" onClick={() => { setCount(0); }}>Reset</button>
      </div>
    </div>
  );
}
