crates/guml-compiler/tests/snapshots/snapshots__escape_hatches_html.snap
---
source: crates/guml-compiler/tests/snapshots.rs
expression: "emitted(\"d.guml\", \"html\")"
---
// ---- Spend.html ----
<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>Spend</title>
    <style>
      /* Stylesheet for the `tailwind` theme — the default.
       *
       * The static HTML backend has no build step by design, so it cannot run Tailwind. This file
       * implements exactly the utilities the `slate` theme emits — nothing more. It is not a Tailwind
       * reimplementation and must not become one: if a theme wants different utilities, it ships its own
       * CSS alongside its rules.
       *
       * Values follow Tailwind's default scale so the two styling paths agree: a document rendered from
       * this file and the same document rendered through Tailwind look the same. Where they would differ,
       * this file is wrong.
       *
       * Palette: slate-50 #f8fafc, slate-200 #e2e8f0, slate-300 #cbd5e1, slate-500 #64748b,
       * slate-600 #475569, slate-700 #334155, slate-900 #0f172a, red-600 #dc2626, red-700 #b91c1c.
       */
      
      *,
      *::before,
      *::after {
        box-sizing: border-box;
      }
      body {
        margin: 0;
        font-family:
          ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
        line-height: 1.5;
      }
      
      /* layout */
      .flex { display: flex; }
      .flex-col { flex-direction: column; }
      .flex-wrap { flex-wrap: wrap; }
      .flex-1 { flex: 1 1 0%; }
      .items-center { align-items: center; }
      .justify-center { justify-content: center; }
      .justify-between { justify-content: space-between; }
      .inline-block { display: inline-block; }
      .mx-auto { margin-left: auto; margin-right: auto; }
      .gap-2 { gap: 0.5rem; }
      .gap-3 { gap: 0.75rem; }
      .space-y-1 > * + * { margin-top: 0.25rem; }
      .inline-flex { display: inline-flex; }
      .grid { display: grid; }
      .fixed { position: fixed; }
      .left-1\/2 { left: 50%; }
      .top-1\/2 { top: 50%; }
      .top-0 { top: 0; }
      .right-0 { right: 0; }
      .right-6 { right: 1.5rem; }
      .bottom-6 { bottom: 1.5rem; }
      .z-50 { z-index: 50; }
      .-translate-x-1\/2 { transform: translateX(-50%); }
      /* Both axes on one element, so the two transforms must be written as a single declaration —
       * a second `transform` would replace the first rather than compose with it. */
      .-translate-x-1\/2.-translate-y-1\/2 { transform: translate(-50%, -50%); }
      .-translate-y-1\/2 { transform: translateY(-50%); }
      .gap-1 { gap: 0.25rem; }
      .gap-4 { gap: 1rem; }
      .gap-6 { gap: 1.5rem; }
      .list-none { list-style: none; }
      /* The grid column counts `cols=` emits. Without these the no-JavaScript backend rendered every
       * `cols=3` as a single column, because `md:grid-cols-*` is produced by the compiler at runtime and
       * so had never been written into this file. */
      @media (min-width: 768px) {
        .md\:grid-cols-2 { grid-template-columns: repeat(2, minmax(0, 1fr)); }
        .md\:grid-cols-3 { grid-template-columns: repeat(3, minmax(0, 1fr)); }
        .md\:grid-cols-4 { grid-template-columns: repeat(4, minmax(0, 1fr)); }
      }
      
      /* spacing */
      .mt-1 { margin-top: 0.25rem; }
      .mt-2 { margin-top: 0.5rem; }
      .mt-4 { margin-top: 1rem; }
      .mt-6 { margin-top: 1.5rem; }
      .mt-8 { margin-top: 2rem; }
      .mt-10 { margin-top: 2.5rem; }
      .my-4 { margin-top: 1rem; margin-bottom: 1rem; }
      .p-6 { padding: 1.5rem; }
      .px-3 { padding-left: 0.75rem; padding-right: 0.75rem; }
      .px-4 { padding-left: 1rem; padding-right: 1rem; }
      .px-6 { padding-left: 1.5rem; padding-right: 1.5rem; }
      .py-2 { padding-top: 0.5rem; padding-bottom: 0.5rem; }
      .py-3 { padding-top: 0.75rem; padding-bottom: 0.75rem; }
      .py-5 { padding-top: 1.25rem; padding-bottom: 1.25rem; }
      .py-8 { padding-top: 2rem; padding-bottom: 2rem; }
      .py-16 { padding-top: 4rem; padding-bottom: 4rem; }
      .py-24 { padding-top: 6rem; padding-bottom: 6rem; }
      .m-0 { margin: 0; }
      .ml-0 { margin-left: 0; }
      .p-0 { padding: 0; }
      .p-2 { padding: 0.5rem; }
      .px-2 { padding-left: 0.5rem; padding-right: 0.5rem; }
      .py-0\.5 { padding-top: 0.125rem; padding-bottom: 0.125rem; }
      .pb-3 { padding-bottom: 0.75rem; }
      .pr-6 { padding-right: 1.5rem; }
      
      /* sizing */
      .h-4 { height: 1rem; }
      .w-4 { width: 1rem; }
      .w-full { width: 100%; }
      .max-w-sm { max-width: 24rem; }
      .max-w-3xl { max-width: 48rem; }
      .max-w-6xl { max-width: 72rem; }
      .h-2 { height: 0.5rem; }
      .h-8 { height: 2rem; }
      .w-8 { width: 2rem; }
      .h-full { height: 100%; }
      .max-w-full { max-width: 100%; }
      .max-w-lg { max-width: 32rem; }
      .block { display: block; }
      
      /* type */
      .text-xs { font-size: 0.75rem; line-height: 1rem; }
      .text-sm { font-size: 0.875rem; line-height: 1.25rem; }
      .text-lg { font-size: 1.125rem; line-height: 1.75rem; }
      .text-2xl { font-size: 1.5rem; line-height: 2rem; }
      .text-3xl { font-size: 1.875rem; line-height: 2.25rem; }
      .text-4xl { font-size: 2.25rem; line-height: 2.5rem; }
      .text-5xl { font-size: 3rem; line-height: 1; }
      .font-medium { font-weight: 500; }
      .font-semibold { font-weight: 600; }
      .font-bold { font-weight: 700; }
      .tracking-tight { letter-spacing: -0.025em; }
      .tabular-nums { font-variant-numeric: tabular-nums; }
      .text-center { text-align: center; }
      
      /* colour */
      .bg-white { background-color: #fff; }
      .bg-slate-50 { background-color: #f8fafc; }
      .bg-slate-900 { background-color: #0f172a; }
      .bg-red-600 { background-color: #dc2626; }
      .text-white { color: #fff; }
      .text-slate-500 { color: #64748b; }
      .text-slate-600 { color: #475569; }
      .text-slate-700 { color: #334155; }
      .text-slate-900 { color: #0f172a; }
      .bg-slate-100 { background-color: #f1f5f9; }
      .bg-slate-200 { background-color: #e2e8f0; }
      .bg-red-50 { background-color: #fef2f2; }
      .text-red-700 { color: #b91c1c; }
      
      /* borders */
      .border { border-width: 1px; border-style: solid; }
      .border-t { border-top-width: 1px; border-style: solid; }
      .border-slate-200 { border-color: #e2e8f0; }
      .border-slate-300 { border-color: #cbd5e1; }
      .rounded { border-radius: 0.25rem; }
      .rounded-md { border-radius: 0.375rem; }
      .rounded-xl { border-radius: 0.75rem; }
      .shadow-sm { box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05); }
      .divide-y > * + * { border-top-width: 1px; border-style: solid; }
      .divide-slate-200 > * + * { border-color: #e2e8f0; }
      .border-0 { border-width: 0; }
      .border-b { border-bottom-width: 1px; border-style: solid; }
      .border-collapse { border-collapse: collapse; }
      .text-left { text-align: left; }
      .align-middle { vertical-align: middle; }
      .border-r { border-right-width: 1px; border-style: solid; }
      .border-l { border-left-width: 1px; border-style: solid; }
      .border-red-200 { border-color: #fecaca; }
      .rounded-full { border-radius: 9999px; }
      .shadow-lg { box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1); }
      
      /* interaction */
      .cursor-pointer { cursor: pointer; }
      .outline-none { outline: 2px solid transparent; outline-offset: 2px; }
      .transition-colors {
        transition-property: color, background-color, border-color;
        transition-duration: 150ms;
      }
      .hover\:bg-slate-50:hover { background-color: #f8fafc; }
      .hover\:bg-slate-800:hover { background-color: #1e293b; }
      .hover\:bg-red-700:hover { background-color: #b91c1c; }
      .hover\:text-slate-900:hover { color: #0f172a; }
      /* A loading placeholder must not animate for a reader who asked it not to. */
      .animate-pulse { animation: guml-pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite; }
      @keyframes guml-pulse {
        0%, 100% { opacity: 1; }
        50% { opacity: 0.5; }
      }
      @media (prefers-reduced-motion: reduce) {
        .animate-pulse { animation: none; }
        .transition-colors { transition-duration: 0ms; }
      }
      
      /* The theme's accessibility contract. These two are the reason a theme has to declare a focus
       * treatment: without them a keyboard user cannot see where they are. */
      .focus\:ring-2:focus { box-shadow: 0 0 0 2px var(--guml-ring, #0f172a); }
      .focus\:ring-slate-900:focus { --guml-ring: #0f172a; }
      .disabled\:opacity-40:disabled { opacity: 0.4; }
      
      @media (min-width: 640px) {
        .sm\:text-5xl { font-size: 3rem; line-height: 1; }
      }
      
      /* Dark scheme.
       *
       * Written twice on purpose, with descendant selectors rather than CSS nesting — this file is inlined
       * into a static artifact, so it favours compatibility over brevity.
       *
       * 1. The media query is what a document gets with no host involvement. Every rule is guarded by
       *    `:not([data-theme="light"])`, so a reader who explicitly chose light still wins over an OS set
       *    to dark. Guarding only `color-scheme` would have left the colours overriding that choice.
       * 2. The attribute block lets a host force a scheme, which is what a site with a theme toggle needs.
       *
       * Both blocks are generated from the same table as the theme's `dark:` variants, so the CSS and the
       * class strings cannot drift apart.
       */
      @media (prefers-color-scheme: dark) {
        :root:not([data-theme="light"]):not([data-theme="dark"]) { color-scheme: dark; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:bg-slate-950 { background-color: #020617; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:bg-slate-900 { background-color: #0f172a; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:bg-slate-100 { background-color: #f1f5f9; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:bg-red-500 { background-color: #ef4444; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:text-slate-900 { color: #0f172a; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:text-slate-100 { color: #f1f5f9; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:text-slate-300 { color: #cbd5e1; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:text-slate-400 { color: #94a3b8; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:border-slate-800 { border-color: #1e293b; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:border-slate-700 { border-color: #334155; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:hover\:bg-slate-800:hover { background-color: #1e293b; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:hover\:bg-slate-200:hover { background-color: #e2e8f0; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:hover\:bg-red-400:hover { background-color: #f87171; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:hover\:text-slate-100:hover { color: #f1f5f9; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:divide-slate-800 > * + * { border-color: #1e293b; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:focus\:ring-slate-100:focus { --guml-ring: #f1f5f9; }
      }
      
      :root[data-theme="dark"] { color-scheme: dark; }
      :root[data-theme="dark"] .dark\:bg-slate-950 { background-color: #020617; }
      :root[data-theme="dark"] .dark\:bg-slate-900 { background-color: #0f172a; }
      :root[data-theme="dark"] .dark\:bg-slate-100 { background-color: #f1f5f9; }
      :root[data-theme="dark"] .dark\:bg-red-500 { background-color: #ef4444; }
      :root[data-theme="dark"] .dark\:text-slate-900 { color: #0f172a; }
      :root[data-theme="dark"] .dark\:text-slate-100 { color: #f1f5f9; }
      :root[data-theme="dark"] .dark\:text-slate-300 { color: #cbd5e1; }
      :root[data-theme="dark"] .dark\:text-slate-400 { color: #94a3b8; }
      :root[data-theme="dark"] .dark\:border-slate-800 { border-color: #1e293b; }
      :root[data-theme="dark"] .dark\:border-slate-700 { border-color: #334155; }
      :root[data-theme="dark"] .dark\:hover\:bg-slate-800:hover { background-color: #1e293b; }
      :root[data-theme="dark"] .dark\:hover\:bg-slate-200:hover { background-color: #e2e8f0; }
      :root[data-theme="dark"] .dark\:hover\:bg-red-400:hover { background-color: #f87171; }
      :root[data-theme="dark"] .dark\:hover\:text-slate-100:hover { color: #f1f5f9; }
      :root[data-theme="dark"] .dark\:divide-slate-800 > * + * { border-color: #1e293b; }
      :root[data-theme="dark"] .dark\:focus\:ring-slate-100:focus { --guml-ring: #f1f5f9; }
      
      /* Utilities added with the button sizes, badge tones and layout modifiers the registry advertises.
         Without a rule here the no-JavaScript build renders them unstyled: this backend has no build step,
         so a class with no declaration is a silent, purely visual failure. */
      .border-transparent { border-color: transparent; }
      .justify-end { justify-content: flex-end; }
      .text-base { font-size: 1rem; line-height: 1.5rem; }
      .gap-1\.5 { gap: 0.375rem; }
      .h-6 { height: 1.5rem; }
      .h-10 { height: 2.5rem; }
      .hover\:bg-slate-100:hover { background-color: #f1f5f9; }
      .hover\:bg-slate-200:hover { background-color: #e2e8f0; }
      
      @media (prefers-color-scheme: dark) {
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:bg-slate-800 { background-color: #1e293b; }
        :root:not([data-theme="light"]):not([data-theme="dark"]) .dark\:hover\:bg-slate-700:hover { background-color: #334155; }
      }
      
      :root[data-theme="dark"] .dark\:bg-slate-800 { background-color: #1e293b; }
      :root[data-theme="dark"] .dark\:hover\:bg-slate-700:hover { background-color: #334155; }
    </style>
  </head>
  <body>
    <main class="mx-auto max-w-3xl p-6">
      <p class="text-2xl font-semibold text-slate-900 dark:text-slate-100">Spend — 0 entries</p>
      <p class="mt-10 text-center text-sm text-slate-500" data-guml-inert="no data at build time">Nothing here yet.</p>
      <p class="mt-1 text-sm text-slate-500 dark:text-slate-400">Totals are formatted by a `js` block, because currency formatting is not something the</p>
      <p class="mt-1 text-sm text-slate-500 dark:text-slate-400">vocabulary should try to own.</p>
    </main>
  </body>
</html>
