crates/guml-compiler/tests/snapshots/snapshots__escape_hatches_react.snap
---
source: crates/guml-compiler/tests/snapshots.rs
expression: "emitted(\"d.guml\", \"react\")"
---
// ---- Spend.tsx ----
import { useState, useCallback, useEffect, useMemo, Component } from "react";

import type { ReactNode } from "react";

type Entry = { id: string; label: string; amount: number; month: string };

/**
 * `fetch` with exponential backoff. Generated by the GUML compiler.
 *
 * Retries only what is safe to repeat — idempotent methods, and only on a transport failure or a 5xx.
 * A 4xx will answer the same way next time, and an abort means the caller no longer wants the answer.
 */
async function retrying(url: string, init: RequestInit = {}, tries = 3): Promise<Response> {
  const idempotent = !init.method || ["GET", "HEAD", "PUT", "DELETE"].includes(init.method);
  let wait = 300;
  for (let attempt = 1; ; attempt++) {
    const last = attempt >= tries || !idempotent;
    try {
      const res = await fetch(url, init);
      if (res.ok || res.status < 500 || last) return res;
    } catch (err) {
      if (last || (err instanceof Error && err.name === "AbortError")) throw err;
    }
    await new Promise((resolve) => setTimeout(resolve, wait));
    wait *= 2;
  }
}

/**
 * Response cache. Generated by the GUML compiler.
 *
 * In-flight deduplication, stale-while-revalidate, invalidation on mutation, and stale-on-failure —
 * the four things every application needs from a fetch layer and nobody writes on the first pass.
 * Only GET is cached; a cached POST would hand one caller another's response.
 */
const GUML_CACHE = new Map<string, { at: number; data: unknown }>();
const GUML_INFLIGHT = new Map<string, Promise<unknown>>();
/** How long a cached response is served without revalidating behind it. */
const GUML_STALE_MS = 30_000;

/** Drop every cached entry whose URL starts with `prefix`. Called after a mutation. */
function invalidate(prefix: string): void {
  for (const key of [...GUML_CACHE.keys()]) {
    if (key.slice(key.indexOf(" ") + 1).startsWith(prefix)) GUML_CACHE.delete(key);
  }
}

async function cached<T>(url: string, init: RequestInit = {}): Promise<T> {
  const method = init.method ?? "GET";
  const key = `${method} ${url}`;
  if (method !== "GET") return read<T>(url, init);

  const hit = GUML_CACHE.get(key);
  const fresh = hit && Date.now() - hit.at < GUML_STALE_MS;
  if (hit && !fresh) {
    // Stale: revalidate behind the value we are about to return. Errors are swallowed here on purpose —
    // the caller already has data, and a background refresh failing is not the caller's problem.
    void refresh<T>(key, url, init).catch(() => {});
  }
  if (hit) return hit.data as T;

  const pending = GUML_INFLIGHT.get(key);
  if (pending) return pending as Promise<T>;
  return refresh<T>(key, url, init);
}

function refresh<T>(key: string, url: string, init: RequestInit): Promise<T> {
  const request = read<T>(url, init)
    .then((data) => {
      GUML_CACHE.set(key, { at: Date.now(), data });
      return data;
    })
    .catch((err: unknown) => {
      // Offline, with something to show: the last known data beats replacing a working screen with an
      // error. The caller is told it is stale so it can say so.
      const hit = GUML_CACHE.get(key);
      if (hit) return hit.data as T;
      throw err;
    })
    .finally(() => GUML_INFLIGHT.delete(key));
  GUML_INFLIGHT.set(key, request as Promise<unknown>);
  return request;
}

async function read<T>(url: string, init: RequestInit): Promise<T> {
  const res = await retrying(url, init);
  if (!res.ok) throw new Error(`Request failed: ${res.status}`);
  return (await res.json()) as T;
}

/**
 * Error boundary. Generated by the GUML compiler.
 *
 * Emitted because this document uses a `js` or `raw` escape hatch — the two places where the compiler's
 * guarantees stop and the body is passed through verbatim. Generated render code cannot throw; that code
 * can, and without a boundary one throw blanks the entire page.
 */
class GumlBoundary extends Component<{ children: ReactNode }, { error: Error | null }> {
  state: { error: Error | null } = { error: null };

  static getDerivedStateFromError(error: Error) {
    return { error };
  }

  render() {
    if (!this.state.error) return this.props.children;
    return (
      <div role="alert" className="rounded-md border border-red-200 bg-red-50 px-4 py-3 text-sm text-red-700">
        <p className="font-medium">This view could not render.</p>
        <p className="mt-1">
          {this.state.error.message} — the most likely cause is a `js` or `raw` block, which the GUML
          compiler passes through without checking.
        </p>
      </div>
    );
  }
}

const MONTH_OPTIONS = ["all", "q1", "q2"] as const;

export default function Spend() {
  const [month, setMonth] = useState<"all" | "q1" | "q2">("all");

  // resource `entries`
  const [entries, setEntries] = useState<Entry[]>([]);
  const [entriesLoading, setEntriesLoading] = useState(true);
  const [entriesError, setEntriesError] = useState<string | null>(null);

  const entriesList = useCallback(() => {
    const controller = new AbortController();
    let alive = true;
    setEntriesLoading(true);
    setEntriesError(null);
    cached<Entry[]>("/api/entries", { signal: controller.signal })
      .then((rows) => {
        if (alive) setEntries(rows);
      })
      .catch((err: unknown) => {
        if (!alive || (err instanceof Error && err.name === "AbortError")) return;
        setEntriesError(err instanceof Error ? err.message : "Unknown error");
      })
      .finally(() => {
        if (alive) setEntriesLoading(false);
      });
    return () => {
      alive = false;
      controller.abort();
    };
  }, []);

  useEffect(entriesList, [entriesList]);

  const currency = (n: number) =>
    n.toLocaleString("en-GB", { style: "currency", currency: "GBP" });
  const total = (xs: { amount: number }[]) => xs.reduce((sum, x) => sum + x.amount, 0);

  const visibleEntries = useMemo(
    () =>
      month === "all" ? entries : entries.filter((it) => it.month === month),
    [entries, month],
  );

  return (
    <GumlBoundary>
      <p className="text-2xl font-semibold tracking-tight text-foreground">Spend — {entries.length} entries</p>
      <div className="mt-4 flex gap-2">
        {MONTH_OPTIONS.map((option) => (
          <button
            key={option}
            type="button"
            aria-pressed={month === option}
            onClick={() => setMonth(option)}
            className={
              month === option
                ? "rounded-full bg-slate-900 px-3 py-1 text-xs font-medium text-white"
                : "rounded-full border border-slate-300 px-3 py-1 text-xs text-slate-600"
            }
          >
            {option}
          </button>
        ))}
      </div>
      {entriesError && (
        <p role="alert" className="mt-4 rounded-md bg-red-50 px-3 py-2 text-sm text-red-700">
          {entriesError}
        </p>
      )}
      {entriesLoading ? (
        <table className="mt-6 w-full caption-bottom border-collapse text-sm">
        <thead>
          <tr>
            <th scope="col" className="h-10 border-b border-border px-2 text-left align-middle font-medium whitespace-nowrap text-muted-foreground">Entry</th>
            <th scope="col" className="h-10 border-b border-border px-2 text-left align-middle font-medium whitespace-nowrap text-muted-foreground">Amount</th>
          </tr>
        </thead>
          <tbody>
            {[0, 1, 2].map((n) => (
              <tr key={n}>
                <td colSpan={2} className="h-12 animate-pulse rounded-md bg-slate-100" />
              </tr>
            ))}
          </tbody>
        </table>
      ) : visibleEntries.length === 0 ? (
        <p className="mt-10 text-center text-sm text-slate-500">Nothing here yet.</p>
      ) : (
        <table className="mt-6 w-full caption-bottom border-collapse text-sm">
        <thead>
          <tr>
            <th scope="col" className="h-10 border-b border-border px-2 text-left align-middle font-medium whitespace-nowrap text-muted-foreground">Entry</th>
            <th scope="col" className="h-10 border-b border-border px-2 text-left align-middle font-medium whitespace-nowrap text-muted-foreground">Amount</th>
          </tr>
        </thead>
          <tbody>
            {visibleEntries.map((item, i) => (
              <tr key={item.id}>
                <td className="border-b border-border p-2 align-middle whitespace-nowrap text-foreground">
                <span className="flex-1 text-sm text-foreground">{item.label}</span>
                </td>
                <td className="border-b border-border p-2 align-middle whitespace-nowrap text-foreground">
                <span className="flex-1 text-sm text-foreground">{item.amount}</span>
                </td>
              </tr>
            ))}
          </tbody>
        </table>
      )}
      <p className="text-xs">Total: {currency(total(entries))}</p>
      <p className="leading-7 text-foreground">Totals are formatted by a `js` block, because currency formatting is not something the</p>
      <p className="leading-7 text-foreground">vocabulary should try to own.</p>
    </GumlBoundary>
  );
}
