crates/guml-compiler/tests/snapshots/snapshots__invoices_react.snap
---
source: crates/guml-compiler/tests/snapshots.rs
expression: "emitted(\"invoices.guml\", \"react\")"
---
// ---- Invoices.tsx ----
import { useState, useCallback, useEffect, useMemo } from "react";

type Invoice = { id: string; client: string; amount: number; paid: boolean; due: string };

/**
 * `fetch` with exponential backoff. Generated by the GUML compiler.
 *
 * Retries only what is safe to repeat — idempotent methods, and only on a transport failure or a 5xx.
 * A 4xx will answer the same way next time, and an abort means the caller no longer wants the answer.
 */
async function retrying(url: string, init: RequestInit = {}, tries = 3): Promise<Response> {
  const idempotent = !init.method || ["GET", "HEAD", "PUT", "DELETE"].includes(init.method);
  let wait = 300;
  for (let attempt = 1; ; attempt++) {
    const last = attempt >= tries || !idempotent;
    try {
      const res = await fetch(url, init);
      if (res.ok || res.status < 500 || last) return res;
    } catch (err) {
      if (last || (err instanceof Error && err.name === "AbortError")) throw err;
    }
    await new Promise((resolve) => setTimeout(resolve, wait));
    wait *= 2;
  }
}

/**
 * Response cache. Generated by the GUML compiler.
 *
 * In-flight deduplication, stale-while-revalidate, invalidation on mutation, and stale-on-failure —
 * the four things every application needs from a fetch layer and nobody writes on the first pass.
 * Only GET is cached; a cached POST would hand one caller another's response.
 */
const GUML_CACHE = new Map<string, { at: number; data: unknown }>();
const GUML_INFLIGHT = new Map<string, Promise<unknown>>();
/** How long a cached response is served without revalidating behind it. */
const GUML_STALE_MS = 30_000;

/** Drop every cached entry whose URL starts with `prefix`. Called after a mutation. */
function invalidate(prefix: string): void {
  for (const key of [...GUML_CACHE.keys()]) {
    if (key.slice(key.indexOf(" ") + 1).startsWith(prefix)) GUML_CACHE.delete(key);
  }
}

async function cached<T>(url: string, init: RequestInit = {}): Promise<T> {
  const method = init.method ?? "GET";
  const key = `${method} ${url}`;
  if (method !== "GET") return read<T>(url, init);

  const hit = GUML_CACHE.get(key);
  const fresh = hit && Date.now() - hit.at < GUML_STALE_MS;
  if (hit && !fresh) {
    // Stale: revalidate behind the value we are about to return. Errors are swallowed here on purpose —
    // the caller already has data, and a background refresh failing is not the caller's problem.
    void refresh<T>(key, url, init).catch(() => {});
  }
  if (hit) return hit.data as T;

  const pending = GUML_INFLIGHT.get(key);
  if (pending) return pending as Promise<T>;
  return refresh<T>(key, url, init);
}

function refresh<T>(key: string, url: string, init: RequestInit): Promise<T> {
  const request = read<T>(url, init)
    .then((data) => {
      GUML_CACHE.set(key, { at: Date.now(), data });
      return data;
    })
    .catch((err: unknown) => {
      // Offline, with something to show: the last known data beats replacing a working screen with an
      // error. The caller is told it is stale so it can say so.
      const hit = GUML_CACHE.get(key);
      if (hit) return hit.data as T;
      throw err;
    })
    .finally(() => GUML_INFLIGHT.delete(key));
  GUML_INFLIGHT.set(key, request as Promise<unknown>);
  return request;
}

async function read<T>(url: string, init: RequestInit): Promise<T> {
  const res = await retrying(url, init);
  if (!res.ok) throw new Error(`Request failed: ${res.status}`);
  return (await res.json()) as T;
}

const VIEW_OPTIONS = ["all", "open", "paid"] as const;

export default function Invoices() {
  const [view, setView] = useState<"all" | "open" | "paid">("all");

  // resource `invoices`
  const [invoices, setInvoices] = useState<Invoice[]>([]);
  const [invoicesLoading, setInvoicesLoading] = useState(true);
  const [invoicesError, setInvoicesError] = useState<string | null>(null);

  const invoicesList = useCallback(() => {
    const controller = new AbortController();
    let alive = true;
    setInvoicesLoading(true);
    setInvoicesError(null);
    cached<Invoice[]>("/api/invoices", { signal: controller.signal })
      .then((rows) => {
        if (alive) setInvoices(rows);
      })
      .catch((err: unknown) => {
        if (!alive || (err instanceof Error && err.name === "AbortError")) return;
        setInvoicesError(err instanceof Error ? err.message : "Unknown error");
      })
      .finally(() => {
        if (alive) setInvoicesLoading(false);
      });
    return () => {
      alive = false;
      controller.abort();
    };
  }, []);

  useEffect(invoicesList, [invoicesList]);

  const invoicesSettle = useCallback(
    async (item: Invoice, body: Partial<Invoice> = {}) => {
      const snapshot = invoices;
      setInvoices((prev) => prev.map((it) => (it === item ? { ...it, ...body } : it)));
      try {
        const res = await retrying(`/api/invoices/${item.id}`, {
          method: "PATCH",
          headers: { "Content-Type": "application/json" },
          body: JSON.stringify(body),
        });
        if (!res.ok) throw new Error(`Request failed: ${res.status}`);
        invalidate("/api/invoices");
      } catch (err: unknown) {
        setInvoices(snapshot);
        setInvoicesError(err instanceof Error ? err.message : "Could not save");
      }
    },
    [invoices],
  );

  // `invoices.open.count` is used 2 times; computed once.
  const invoicesOpenCount = useMemo(() => invoices.filter((it) => !it.paid).length, [invoices]);

  const visibleInvoices = useMemo(
    () =>
      view === "open"
        ? invoices.filter((it) => !it.paid)
        : view === "paid"
          ? invoices.filter((it) => it.paid)
          : invoices,
    [invoices, view],
  );

  useEffect(() => { invoicesList(); }, [view]);

  return (
    <>
      <p className="text-2xl font-semibold text-slate-900 dark:text-slate-100">Invoices — {invoicesOpenCount} awaiting payment</p>
      <div className="flex items-center gap-3 justify-between">
        <p className="mt-6 text-center text-5xl font-bold tabular-nums text-slate-900 dark:text-slate-100">{invoices.map((it) => it.amount).reduce((a, b) => a + Number(b), 0)}</p>
        <button className="rounded-md px-4 py-2 text-sm font-medium transition-colors text-slate-500 dark:text-slate-400 hover:text-slate-900 dark:hover:text-slate-100 focus:ring-2 focus:ring-slate-900 dark:focus:ring-slate-100 disabled:opacity-40" type="button" onClick={() => { invoicesList(); }}>Refresh</button>
      </div>
      <div className="mt-4 flex gap-2">
        {VIEW_OPTIONS.map((option) => (
          <button
            key={option}
            type="button"
            aria-pressed={view === option}
            onClick={() => setView(option)}
            className={
              view === option
                ? "rounded-full bg-slate-900 px-3 py-1 text-xs font-medium text-white"
                : "rounded-full border border-slate-300 px-3 py-1 text-xs text-slate-600"
            }
          >
            {option}
          </button>
        ))}
      </div>
      {invoicesError && (
        <p role="alert" className="mt-4 rounded-md bg-red-50 px-3 py-2 text-sm text-red-700">
          {invoicesError}
        </p>
      )}
      {invoicesLoading ? (
        <table className="mt-6 w-full border-collapse rounded-md border border-slate-200 dark:border-slate-800 text-sm">
        <thead>
          <tr>
            <th scope="col" className="border-b border-slate-200 dark:border-slate-800 px-3 py-2 text-left text-xs font-medium text-slate-500 dark:text-slate-400">Client</th>
            <th scope="col" className="border-b border-slate-200 dark:border-slate-800 px-3 py-2 text-left text-xs font-medium text-slate-500 dark:text-slate-400">Amount</th>
            <th scope="col" className="border-b border-slate-200 dark:border-slate-800 px-3 py-2 text-left text-xs font-medium text-slate-500 dark:text-slate-400">Due</th>
            <th scope="col" className="border-b border-slate-200 dark:border-slate-800 px-3 py-2 text-left text-xs font-medium text-slate-500 dark:text-slate-400">Paid</th>
          </tr>
        </thead>
          <tbody>
            {[0, 1, 2].map((n) => (
              <tr key={n}>
                <td colSpan={4} className="h-12 animate-pulse rounded-md bg-slate-100" />
              </tr>
            ))}
          </tbody>
        </table>
      ) : visibleInvoices.length === 0 ? (
        <p className="mt-10 text-center text-sm text-slate-500 dark:text-slate-400">No invoices match this view.</p>
      ) : (
        <table className="mt-6 w-full border-collapse rounded-md border border-slate-200 dark:border-slate-800 text-sm">
        <thead>
          <tr>
            <th scope="col" className="border-b border-slate-200 dark:border-slate-800 px-3 py-2 text-left text-xs font-medium text-slate-500 dark:text-slate-400">Client</th>
            <th scope="col" className="border-b border-slate-200 dark:border-slate-800 px-3 py-2 text-left text-xs font-medium text-slate-500 dark:text-slate-400">Amount</th>
            <th scope="col" className="border-b border-slate-200 dark:border-slate-800 px-3 py-2 text-left text-xs font-medium text-slate-500 dark:text-slate-400">Due</th>
            <th scope="col" className="border-b border-slate-200 dark:border-slate-800 px-3 py-2 text-left text-xs font-medium text-slate-500 dark:text-slate-400">Paid</th>
          </tr>
        </thead>
          <tbody>
            {visibleInvoices.map((item, i) => (
              <tr key={item.id}>
                <td className="border-b border-slate-200 dark:border-slate-800 px-3 py-2 align-middle text-slate-900 dark:text-slate-100">
                <span className="flex-1 text-sm text-slate-900 dark:text-slate-100">{item.client}</span>
                </td>
                <td className="border-b border-slate-200 dark:border-slate-800 px-3 py-2 align-middle text-slate-900 dark:text-slate-100">
                <span className="flex-1 text-sm text-slate-900 dark:text-slate-100">{item.amount}</span>
                </td>
                <td className="border-b border-slate-200 dark:border-slate-800 px-3 py-2 align-middle text-slate-900 dark:text-slate-100">
                <span className="flex-1 text-sm text-slate-900 dark:text-slate-100">{item.due}</span>
                </td>
                <td className="border-b border-slate-200 dark:border-slate-800 px-3 py-2 align-middle text-slate-900 dark:text-slate-100">
                <input className="h-4 w-4 rounded border-slate-300 dark:border-slate-700 focus:ring-2 focus:ring-slate-900 dark:focus:ring-slate-100 disabled:opacity-40" type="checkbox" aria-label={`Mark ${item.client} paid`} checked={item.paid} onChange={() => { invoicesSettle(item, {}); }} />
                </td>
              </tr>
            ))}
          </tbody>
        </table>
      )}
      <p className="mt-1 text-sm text-slate-500 dark:text-slate-400">The state field here is `paid`, not `done`. `{invoicesOpenCount}` filters on it because the</p>
      <p className="mt-1 text-sm text-slate-500 dark:text-slate-400">compiler reads the flag from the row type rather than from a name it hoped for.</p>
    </>
  );
}
